--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,10 @@ Thumbs.db
 ############
 *.pro
 *.pro.user
-*.autosave
+XDBFDebug/
+XDBFRelease/
+
+# Other Files #
+###############
 *.orig
+*.autosave
